---- Changes since 1.130 ----
Packages can now be installed directly from yum, if installed.
The entire system can also be upgraded from yum.
---- Changes since 1.150 ----
The package update system (YUM, APT or Redhat Network) can now be selected on the Module Config page, rather than being always detected automatically.
---- Changes since 1.170 ----
Added support for the Blastwave contributed Solaris package management installed, pkg-get.
---- Changes since 1.180 ----
On Solaris systems, packages can now be installed from a directory or local filesystem wildcard.
---- Changes since 1.220 ----
Added support for the Mandrake URPMI package system.
Cleaned up package system support code, to allow searching for packages in a consistent way on all operating systems.
---- Changes since 1.230 ----
Added an option to enable disabled repositories when installing a package from YUM.
---- Changes since 1.290 ----
Added basic support for MSI packages on Windows systems.
---- Changes since 1.300 ----
Added a Module Config option to use aptitude instead of apt-get on Debian-based systems.
---- Changes since 1.310 ----
Added a popup progress window to track uploaded package files.
---- Changes since 1.330 ----
Fixed several bugs related to finding available updates on Debian and Redhat.
Added detection of epochs for RPMs and packages from YUM.
---- Changes since 1.340 ----
Added an Upgrade All button for CSW packages.
---- Changes since 1.440 ----
Added a Module Config option to not use any update system, even if YUM or APT are installed.
Added the function package_files for other modules to call, when only a list of files in some package is needed.